--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 contact_links:
   - name: QwQ
-    url: https://github.com/QwemLM/QwQ/issues
+    url: https://github.com/QwenLM/QwQ/issues
     about: For issues related to QwQ, please report to the QwQ repository.
   - name: Question
     url: https://github.com/QwenLM/Qwen2.5/discussions
